[package]
name = "adventofcode2024"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }

[lib]
name = "common"
path = "common.rs"

[[bin]]
name = "day01"
path = "day01.rs"

[[bin]]
name = "day02"
path = "day02.rs"

[[bin]]
name = "day03"
path = "day03.rs"
